--- a/ansible/playbooks/bootstrap-proxmox.yml
+++ b/ansible/playbooks/bootstrap-proxmox.yml
@@ -285,7 +285,7 @@
           NTP=0.au.pool.ntp.org 1.au.pool.ntp.org 2.au.pool.ntp.org
           FallbackNTP=ntp.ubuntu.com
         mode: '0644'
-      notify: restart timesyncd
+      notify: Restart timesyncd
 
     # ===== COMPLETION MARKERS =====
     - name: Create bootstrap completion file
